fix the overflowing style issue and update the generic landing term

--- a/www/style.css
+++ b/www/style.css
@@ -2954,7 +2954,6 @@ h3.table-title{
 /* Landing Page */
 
 .landing-page {
-  margin-bottom: -100px;  
   position: relative;
 }
 
